base for the repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-pring.datasource.url = jdbc:postgresql://localhost:5432/feedbacker
+spring.datasource.url = jdbc:postgresql://localhost:5432/feedbacker
 spring.datasource.username = postgres
 spring.datasource.password = 547725
 
@@ -7,3 +7,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 spring.jpa.open-in-view = true
+server.port=5000
