--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/feedbacker
-spring.datasource.username = postgres
-spring.datasource.password = 547725
+spring.datasource.url = ${URL}
+spring.datasource.username = ${USER}
+spring.datasource.password = ${PASSWORD}
 
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
