Swagger available on "http://localhost:5000/swagger-ui.html"

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,20 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <!--SWAGGER-->
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>LATEST</version>
+        </dependency>
+
     </dependencies>
 
     <build>
