--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,12 @@ spring.datasource.url = ${URL}
 spring.datasource.username = ${USER}
 spring.datasource.password = ${PASSWORD}
 
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 spring.jpa.open-in-view = true
 server.port=5000
+
+logging.level.org.springframework.security=DEBUG
+
